--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<button class="button extra" onclick="selectOption('Decaff', 'extra', this)">Decaff</button>
        
         <div class="controls">
-            <button class="button full-width" id="exportBtn" onclick="exportData()">Export Data</button>
+            <button class="button full-width" id="exportBtn" onclick="exportToday()">Export Data</button>
             <button class="button full-width" id="exportBtn" onclick="exportCoffeeLists()">Export JSON File. DO NOT USE</button>
             <button class="button full-width" id="uploadBtn" onclick="triggerFileInput()">Upload Coffee Lists. DO NOT USE</button>
             <input type="file" id="fileInput" style="display: none;" onchange="uploadCoffeeLists(event)" />
